--- a/exercises/task one/products.css
+++ b/exercises/task one/products.css
@@ -11,7 +11,7 @@
     background-size: 100% 100%;
 } */
 
-.container .navbar {
+.navbar {
     width: 100%;
     height: 70px;
     background-color: #b5c9cf;
@@ -59,29 +59,22 @@
     border-radius: 2px;
 }
 
-.container .center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50% -50%);
-    font-family: sans-serif;
-    user-select: none;
-}
 
 body {
     background-color: rgb(228, 131, 131);
 }
 
 .card {
-    margin: 10px;
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #ddd;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  }
+    align-items: center;
+    width: 100px;
+    height: 500px;
+}
 
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Grid sütunları tanımlama */
-    gap: 20px; /* Grid öğeleri arasındaki boşluk */
-  }
+
+
+img {
+    margin: 10px 10px;
+    padding: 10px 10px;
+    width: 100px;
+    height: 300px;
+}
